隐藏微观概况面板数据

--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/business-change/business-change.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/business-change/business-change.component.html
@@ -13,7 +13,7 @@
       <td>{{data.changeType}}</td>
       <td>{{data.changeAfterContent}}</td>
       <td>{{data.changeBeforeContent}}</td>
-      <td class="nowrap">{{data.changeDate}}</td>
+      <td class="nowrap">{{data.changeDate | date:'yyyy-MM--dd'}}</td>
     </tr>
   </table>
 
