--- a/economic/src/app/pages/microcosmic/company-detail/company-economic-info/technology-innovation/technology-innovation.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-economic-info/technology-innovation/technology-innovation.component.html
@@ -4,6 +4,9 @@
       <div class="flex-item" echarts [options]="OrganizationEchartData" id="main4"></div>
     </div>
     <div class="flex-cell">
+      <div class="flex-item" echarts [options]="OrganizationPeopleEchartData"></div>
+    </div>
+    <div class="flex-cell">
       <div class="flex-item" echarts [options]="ExpenditureEchartData" id="main2"></div>
     </div>
   </div>
