--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
@@ -1,11 +1,11 @@
 <div class="panel-content">
   <div class="panel-item-title">企业简介：</div>
   <div class="company-profile-con">
-    <div class="company-profile" *ngIf="baseInfo?.introductionLe">
-      {{baseInfo?.introduction}}
+    <div class="company-profile" *ngIf="baseInfo?.introduction">
+      {{baseInfo?.introduction ? baseInfo?.introduction : '无'}}
     </div>
     <div class="no-data-tips" *ngIf="!baseInfo?.introduction">
-      {{CompanyProfile}}
+      {{CompanyIntroductionTips}}
     </div>
   </div>
   <div class="panel-item-title">企业联系人：</div>
@@ -19,7 +19,7 @@
       </table>
     </div>
     <div class="no-data-tips" *ngIf="!baseInfo?.contactPeople">
-      {{CompanyProfile}}
+      {{CompanyContactPeopleTips}}
     </div>
   </div>
   <div class="panel-item-title">企业主要产品：</div>
