--- a/economic/src/app/pages/microcosmic/company-detail/company-overview-info/company-overview-info.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-overview-info/company-overview-info.component.html
@@ -2,10 +2,10 @@
 <div class="panel-bd pop-index-7 animated company-evaluate">
   <div class="panel-content">
     <div id="score-main" echarts [options]="radarMapEchartData" style="width: 3.645833rem;height:500px;"></div>
-    <div id="holder" style="width: 3.645833rem;height:500px;text-align: center;"></div>
+    <div id="holder" style="width: 3.645833rem;height:300px;text-align: center;"></div>
     <table class="table table-bordered" id="lie">
       <tr *ngFor="let data of inferiorityLists">
-        <td class="nowrap">{{data.inferiorityType}}</td>
+        <td class="nowrap" width="110">{{data.inferiorityType}}</td>
         <td name="a">{{data.inferiority}}</td>
       </tr>
     </table>
