--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/tax-registration/tax-registration.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/tax-registration/tax-registration.component.html
@@ -2,7 +2,7 @@
 <div class="panel-content">
   <div class="panel-item-title">税务登记信息：</div>
   <div id="taxationsDiv"> </div>
-  <table class="table table-bordered" id="taxations" *ngIf="companyTaxationList.length>0">
+  <table class="table table-bordered table-align-c" id="taxations" *ngIf="companyTaxationList.length>0">
     <tr>
       <th>登记注册类型</th>
       <th>核算方式</th>
