--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/business-registration/business-registration.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/business-registration/business-registration.component.html
@@ -3,51 +3,57 @@
   <div class="panel-item-title">工商登记信息：</div>
   <table class="table table-bordered" *ngIf="companyDetail?.name">
     <tr>
-      <td class="nowrap">公司名称:</td>
+      <td class="nowrap table-label">公司名称:</td>
       <td colspan="3" id="companyName">{{companyDetail?.name}}</td>
     </tr>
     <tr>
-      <td class="nowrap">住所:</td>
+      <td class="nowrap table-label">住所:</td>
       <td colspan="3" id="companyAddress">{{companyDetail?.address}}</td>
     </tr>
     <tr>
-      <td class="nowrap">重要人员信息:</td>
+      <td class="nowrap table-label">重要人员信息:</td>
       <td colspan="3" id="duties">{{companyDetail?.mainStaff}}</td>
     </tr>
     <tr>
-      <td class="nowrap">社会信用代码:</td>
+      <td class="nowrap table-label">社会信用代码:</td>
       <td id="creditCode">{{companyDetail?.creditCode}}</td>
-      <td class="nowrap">类型:</td>
+      <td class="nowrap table-label">类型:</td>
       <td id="enterpriseType">{{companyDetail?.enterpriseType}}</td>
     </tr>
     <tr>
-      <td class="nowrap">法人:</td>
+      <td class="nowrap table-label">法人:</td>
       <td id="legalPerson">{{companyDetail?.legalRepresentative}}</td>
-      <td class="nowrap">成立日期:</td>
+      <td class="nowrap table-label">成立日期:</td>
       <td id="establishTime">{{companyDetail?.establishDate | date:'yyyy-MM-dd'}}</td>
     </tr>
     <tr>
-      <td class="nowrap">注册资本:</td>
+      <td class="nowrap table-label">注册资本:</td>
       <td id="funds">{{companyDetail?.registeredCapital}}</td>
-      <td class="nowrap">登记机关:</td>
+      <td class="nowrap table-label">登记机关:</td>
       <td id="registrationAuthority">{{companyDetail?.regOrganization}}</td>
     </tr>
     <tr>
-      <td class="nowrap">登记状态:</td>
+      <td class="nowrap table-label">登记状态:</td>
       <td id="registrationType">{{companyDetail?.regStatus}}</td>
-      <td class="nowrap">核准日期:</td>
+      <td class="nowrap table-label">核准日期:</td>
       <td id="approvedTime">{{companyDetail?.approvedDate | date:'yyyy-MM-dd'}}</td>
     </tr>
     <tr>
-      <td class="nowrap">企业联系电话:</td>
-      <td colspan="3" id="telephone">{{companyDetail?.epTelephone}}</td>
+      <td class="nowrap table-label">企业联系电话:</td>
+      <td colspan="3" id="telephone" class="correct-info">
+        <span *ngIf="!changeContactPeopleStatus" popover="点击我纠正信息" placement="right" triggers="mouseenter:mouseleave" (click)="changeContactPeopleStatus = true">{{companyDetail?.epTelephone}}</span>
+        <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeepTelephone"><button (click)="submitChangeTelephone(changeTelephoneTemplate)">提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeInfo('epTelephone')">取消纠错</button></span>
+      </td>
     </tr>
     <tr>
-      <td class="nowrap">企业通讯地址:</td>
-      <td colspan="3" id="companyEms">{{companyDetail?.mailingAddress}}</td>
+      <td class="nowrap table-label">企业通讯地址:</td>
+      <td colspan="3" id="companyEms" class="correct-info">
+        <span *ngIf="!changeCompanyEmsStatus" popover="点击我纠正信息" placement="right" triggers="mouseenter:mouseleave" (click)="changeCompanyEmsStatus = true">{{companyDetail?.mailingAddress}}</span>
+        <span *ngIf="changeCompanyEmsStatus"><input type="text" [(ngModel)]="changemailingAddress"><button (click)="submitChangeAddress(changeAddressTemplate)">提交纠错</button><button (click)="changeCompanyEmsStatus = false;cancelChangeInfo('mailingAddress')">取消纠错</button></span>
+      </td>
     </tr>
     <tr>
-      <td class="nowrap">经营范围:</td>
+      <td class="nowrap table-label">经营范围:</td>
       <td colspan="3" id="range">{{companyDetail?.businessScope}}</td>
     </tr>
 
@@ -56,4 +62,18 @@
     {{CompanyDetailTips}}
   </div>
 </div>
+<ng-template #changeAddressTemplate>
+  <div class="modal-body text-center">
+    <p>{{changeAddressConfirmTips}}</p>
+    <button type="button" class="btn btn-default" (click)="saveChangeInfo('Address')" >确认</button>
+    <button type="button" class="btn btn-primary" (click)="declineSaveChangeInfo()" >取消</button>
+  </div>
+</ng-template>
+<ng-template #changeTelephoneTemplate>
+  <div class="modal-body text-center">
+    <p>{{changeTelephoneConfirmTips}}</p>
+    <button type="button" class="btn btn-default" (click)="saveChangeInfo('Telephone')" >确认</button>
+    <button type="button" class="btn btn-primary" (click)="declineSaveChangeInfo()" >取消</button>
+  </div>
+</ng-template>
 <!-- </div> -->
