--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
@@ -21,6 +21,38 @@
     <div class="no-data-tips" *ngIf="!baseInfo?.contactPeople">
       {{CompanyContactPeopleTips}}
     </div>
+
+    <!--<table>
+      <tr>
+        <th>姓名</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.name}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.name"></span></td>
+        <th>职位</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo.job}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.job"></span></td>
+        <th>联系电话</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo.phone}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.phone"></span></td>
+        <td><div *ngIf="changeContactPeopleStatus"><button>提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeContactPeople()">取消纠错</button></div><button *ngIf="!changeContactPeopleStatus" (click)="changeContactPeopleStatus = true">纠错</button></td>
+      </tr>
+    </table>-->
+    <div class="contact-people">
+      <div class="contact-item">
+        <div class="name fl">
+          <span class="label">姓名：</span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.name}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.name"></span>
+        </div>
+        <div class="job fl">
+          <span class="label">职位：</span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.job}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.job"></span>
+        </div>
+        <div class="phone fl">
+          <span class="label">联系电话：</span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.phone}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.phone"></span>
+        </div>
+        <div class="fl">
+          <div *ngIf="changeContactPeopleStatus"><button (click)="submitChangeContactPeople(changeContactPeopleTemplate)">提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeContactPeople()">取消纠错</button></div>
+          <button *ngIf="!changeContactPeopleStatus" (click)="changeContactPeopleStatus = true">纠错</button>
+        </div>
+      </div>
+    </div>
   </div>
   <div class="panel-item-title">企业主要产品：</div>
   <div class="company-profile-con">
@@ -33,3 +65,11 @@
     </div>
   </div>
 </div>
+
+<ng-template #changeContactPeopleTemplate>
+  <div class="modal-body text-center">
+    <p>{{changeContactPeopleConfirmTips}}</p>
+    <button type="button" class="btn btn-default" (click)="saveChangeInfo()" >确认</button>
+    <button type="button" class="btn btn-primary" (click)="declineSaveChangeInfo()" >取消</button>
+  </div>
+</ng-template>
