--- a/economic/src/app/pages/microcosmic/company-detail/company-detail.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-detail.component.html
@@ -2,7 +2,7 @@
   <div class="panel-hd">
     <div class="title">
       <div class="title-con">
-        <div class="back-box fl" routerLink="/mic/companyList">
+        <div class="back-box fl" [routerLink]="['/mic/companyList', searchName]">
           <span class="back-btn"></span>
         </div>
         <!-- <h3 class="fl" id="name">{{id}}企业科技有限公司</h3> -->
