--- a/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-basic-info/company-profile/company-profile.component.html
@@ -11,47 +11,38 @@
   <div class="panel-item-title">企业联系人：</div>
   <div class="company-profile-con">
 <!--姓名，职位，联系电话-->
-    <div class="contact-people" *ngIf="baseInfo?.contactPeople">
+    <!--<div class="contact-people" *ngIf="baseInfo?.contactPeople">
       <table>
         <tr>
           <th>姓名</th><td>{{baseInfo?.contactPeople}}</td><th>职位</th><td></td><th>联系电话</th><td></td>
         </tr>
       </table>
-    </div>
-    <div class="no-data-tips" *ngIf="!baseInfo?.contactPeople">
-      {{CompanyContactPeopleTips}}
-    </div>
-
-    <!--<table>
-      <tr>
-        <th>姓名</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.name}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.name"></span></td>
-        <th>职位</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo.job}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.job"></span></td>
-        <th>联系电话</th><td><span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo.phone}}</span><span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.phone"></span></td>
-        <td><div *ngIf="changeContactPeopleStatus"><button>提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeContactPeople()">取消纠错</button></div><button *ngIf="!changeContactPeopleStatus" (click)="changeContactPeopleStatus = true">纠错</button></td>
-      </tr>
-    </table>-->
-    <div class="contact-people">
+    </div>-->
+    <div class="contact-people" *ngIf="contactPeopleInfo">
       <div class="contact-item">
         <div class="name fl">
           <span class="label">姓名：</span>
-          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.name}}</span>
-          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.name"></span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.contactsName}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.contactsName"></span>
         </div>
         <div class="job fl">
           <span class="label">职位：</span>
-          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.job}}</span>
-          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.job"></span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.duties}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.duties"></span>
         </div>
         <div class="phone fl">
           <span class="label">联系电话：</span>
-          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.phone}}</span>
-          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.phone"></span>
+          <span *ngIf="!changeContactPeopleStatus">{{contactPeopleInfo?.contactInfo}}</span>
+          <span *ngIf="changeContactPeopleStatus"><input type="text" [(ngModel)]="changeContactPeopleInfo.contactInfo"></span>
         </div>
         <div class="fl">
-          <div *ngIf="changeContactPeopleStatus"><button (click)="submitChangeContactPeople(changeContactPeopleTemplate)">提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeContactPeople()">取消纠错</button></div>
+          <div *ngIf="changeContactPeopleStatus"><button (click)="submitChangeContactPeople(changeContactPeopleTemplate,contactPeopleInfo.rowKey)">提交纠错</button><button (click)="changeContactPeopleStatus = false;cancelChangeContactPeople()">取消纠错</button></div>
           <button *ngIf="!changeContactPeopleStatus" (click)="changeContactPeopleStatus = true">纠错</button>
         </div>
       </div>
+    </div>
+    <div class="no-data-tips" *ngIf="!contactPeopleInfo">
+      {{CompanyContactPeopleTips}}
     </div>
   </div>
   <div class="panel-item-title">企业主要产品：</div>
