--- a/economic/src/app/pages/microcosmic/company-detail/company-detail.component.html
+++ b/economic/src/app/pages/microcosmic/company-detail/company-detail.component.html
@@ -44,6 +44,7 @@
             <li [routerLink]="['basic/tax-tegistration']" [queryParams]="{name: rowKey}" routerLinkActive="active"><em></em>税务登记信息</li>
             <li [routerLink]="['basic/social-security']" [queryParams]="{name: rowKey}" routerLinkActive="active"><em></em>社会保障信息</li>
             <li [routerLink]="['basic/business-problem-ledger']" [queryParams]="{name: rowKey}" routerLinkActive="active"><em></em>企业问题台账</li>
+            <li [routerLink]="['basic/custom-label']" [queryParams]="{name: rowKey}" routerLinkActive="active"><em></em>自定义标签</li>
           </ul>
         </div>
         <div class="menu-row" [routerLink]="['qualifications']" [queryParams]="{name: rowKey}" routerLinkActive="active" [ngClass]="{'active':showIndustryMenusControl === 'qualifications'}">
